# python-project-83

./: .gitignore  Makefile  README.md  build.sh  database.sql  pyproject.toml  tetbd.py
page_analyzer/: app.py  functions.py  parse.py
page_analyzer/templates/: index.html  layout.html  urls.html  urls_show.html
