[project]
name = "hexlet-code"
version = "0.1.0"
description = "A web application for analyzing web pages for SEO "
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.13.4",
    "flask>=3.1.1",
    "gunicorn>=23.0.0",
    "postgres>=4.0",
    "psycopg2-binary>=2.9.10",
    "python-dotenv>=1.1.1",
    "requests>=2.32.4",
    "ruff>=0.12.8",
    "validators>=0.35.0",
]
